[tool.poetry]
name = "discord-music-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
youtube-search = "^2.1.0"
static-ffmpeg = "^1.0.9"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
